RESOLVED FIXED127301
CodeBlockSet::traceMarked doesn't need to visit the ownerExecutable
https://bugs.webkit.org/show_bug.cgi?id=127301
Summary CodeBlockSet::traceMarked doesn't need to visit the ownerExecutable
Mark Hahnenberg
Reported 2014-01-20 12:44:06 PST
We used to just call CodeBlock::visitAggregate, but now we call visitChildren on the ownerExecutable, which is unnecessary. We should go back to the old way of doing things.
Attachments
Patch (1.30 KB, patch)
2014-01-20 13:14 PST, Mark Hahnenberg
no flags
Mark Hahnenberg
Comment 1 2014-01-20 13:14:08 PST
WebKit Commit Bot
Comment 2 2014-01-20 14:13:02 PST
Comment on attachment 221684 [details] Patch Clearing flags on attachment: 221684 Committed r162377: <http://trac.webkit.org/changeset/162377>
WebKit Commit Bot
Comment 3 2014-01-20 14:13:04 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.