CodeBlockSet::traceMarked doesn't need to visit the ownerExecutable https://bugs.webkit.org/show_bug.cgi?id=127301

Reviewed by Oliver Hunt.

We used to just call CodeBlock::visitAggregate, but now we call visitChildren
on the ownerExecutable, which is unnecessary.

* heap/CodeBlockSet.cpp:
(JSC::CodeBlockSet::traceMarked):


Canonical link: https://commits.webkit.org/145299@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162377 268f45cc-cd09-0410-ab3c-d52691b4dbfc